# spi-rating

./: .pre-commit-config.yaml  LICENSE  READ.md  README.md  VGiann_P1.ipynb  pyproject.toml
spi_env/: pyvenv.cfg
spi_env/Scripts/: activate  activate.bat
src/soccer_analysis/: __init__.py  __main__.py  eda.py  inference.py  modeling.py  summary.py
